• Bug fixes and performance improvements

--- a/Views/Shared/_InternalStyle.cshtml
+++ b/Views/Shared/_InternalStyle.cshtml
@@ -39,4 +39,27 @@
     .applicantDetails {
         width: 700px;
     }
+
+    #addrow {
+        background-color: green;
+        color: white;
+    }
+    #submitallrows {
+        background-color: mediumblue;
+        color: white;
+    }
+    #deleteallrows {
+        background-color: darkred;
+        color: white;
+    }
+
+    .submitone {
+        background-color: mediumblue;
+        color: white;
+    }
+    .deleteone {
+        background-color: darkred;
+        color: white;
+    }
+
 </style>
