--- a/Views/Skills/AddSkillsPageView.cshtml
+++ b/Views/Skills/AddSkillsPageView.cshtml
@@ -29,6 +29,8 @@
 }
 
 
+@Html.Partial("_InternalStyle")
+
 <body>
 
     <h2>Add Your Skills</h2>
@@ -40,6 +42,7 @@
     
     <!-- ADVANCED ROW ADDITION -->
     @Html.Partial("_SkillEntry")
+
 
 
 
