• Bug fixes and performance improvements

--- a/Views/Skills/_SkillEntry.cshtml
+++ b/Views/Skills/_SkillEntry.cshtml
@@ -178,6 +178,9 @@
                 RemoveRow(this);
 
             };
+            sub_btn.style.background = "mediumblue";
+            sub_btn.style.color = "white";
+
 
             //DELETE ROW BUTTON
             //https://sebhastian.com/javascript-create-button/
@@ -190,7 +193,9 @@
 
                 RemoveRow(this);
 
-            };
+            }
+            del_btn.style.background = "darkred";
+            del_btn.style.color = "white";
 
             /*
             var testString =
