--- a/Views/Shared/_InternalStyle.cshtml
+++ b/Views/Shared/_InternalStyle.cshtml
@@ -43,14 +43,17 @@
     #addrow {
         background-color: green;
         color: white;
+        border-radius: 3px;
     }
     #submitallrows {
         background-color: mediumblue;
         color: white;
+        border-radius: 3px;
     }
     #deleteallrows {
         background-color: darkred;
         color: white;
+        border-radius: 3px;
     }
 
 
