--- a/Views/Skills/_SkillEntry.cshtml
+++ b/Views/Skills/_SkillEntry.cshtml
@@ -180,6 +180,7 @@
             };
             sub_btn.style.background = "mediumblue";
             sub_btn.style.color = "white";
+            sub_btn.style.borderRadius = "3px";
 
 
             //DELETE ROW BUTTON
@@ -196,6 +197,7 @@
             }
             del_btn.style.background = "darkred";
             del_btn.style.color = "white";
+            del_btn.style.borderRadius = "3px";
 
             /*
             var testString =
