• Enhancements for Add Jobs Page

--- a/Views/Applicants/ApplicantDetails.cshtml
+++ b/Views/Applicants/ApplicantDetails.cshtml
@@ -67,6 +67,15 @@
         <a href="/Skills/AddSkillsPageView/@Model.ApplicantID">HERE</a>
     </p>
 
+    <p>
+        Add Job Information
+        <!-- Link to: /Views/Personals/AddPersonalDetailsPageView/{applicantID}
+            <a href="Views/Personals/AddPersonalDetailsPageView/@Model.ApplicantID">
+
+            -->
+        <a href="/Jobs/AddJobsPageView/@Model.ApplicantID">HERE</a>
+    </p>
+
 
 </div>
 
