--- a/Views/Shared/_InternalStyle.cshtml
+++ b/Views/Shared/_InternalStyle.cshtml
@@ -56,5 +56,12 @@
         border-radius: 3px;
     }
 
+    .jobexperience {
+        border-style: double;
+        background-color: moccasin;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
 
 </style>
