--- a/Views/Shared/_InternalStyle.cshtml
+++ b/Views/Shared/_InternalStyle.cshtml
@@ -57,7 +57,7 @@
     }
 
     .jobexperience {
-        border-style: double;
+        border-style: none;
         background-color: moccasin;
         margin-top: 20px;
         margin-bottom: 20px;
